MULTISITE-4302 fix overlap on news slider

--- a/sites/all/themes/ec_resp/css/less/feature-news.less
+++ b/sites/all/themes/ec_resp/css/less/feature-news.less
@@ -34,12 +34,10 @@
   }
   .news_list {
     padding-left: 0;
-    margin-top: 0;
-    margin-left: 0;
+    margin: 0;
     height: 200px;
     float: left;
     border-bottom: none;
-    margin-bottom: 0;
     > li {
       float: none;
       > a {
